streaming/1/kubernetes/02-fredrikson-www-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: fredrikson-www
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: fredrikson-www
