streaming/1/kubernetes/03-lb.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: kube-system
  name: traeffik-lb
spec:
  type: LoadBalancer
  selector:
    k8s-app: traefik-ingress-lb
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: web
