streaming/1/kubernetes/03-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
  - host: fredrikson.com.ar
    http:
      paths:
      - backend:
          serviceName: fredrikson-www
          servicePort: 80
